--- a/JE.html
+++ b/JE.html
@@ -10,13 +10,13 @@
     <title>Jamin Enterprise</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="/css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="css/stylish-portfolio.css" rel="stylesheet">
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/css/stylish-portfolio.css" rel="stylesheet">
+    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet">
         <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="css/carousel.css" >
+    <link rel="stylesheet" href="/css/carousel.css" >
   </head>
 
   <body>
