--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Hank Quinlan, Horrible Cop</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
+		<link rel="shortcut icon" href="/img/icon2.png">
 	</head>
 	<body>
 		<nav>
