--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
-		<link rel="shortcut icon" href="/img/icon2.png">
-	</head>
+<<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="shortcut icon" href="/img/icon2.png">
+    <title>Jamin Enterprise</title>
+<!-- Bootstrap core CSS -->
+    <link href="/css/bootstrap.css" rel="stylesheet">
+<!-- Add custom CSS here -->
+    <link href="/css/stylish-portfolio.css" rel="stylesheet">
+    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+<!-- Custom styles for this template -->
+    <link rel="stylesheet" href="/css/carousel.css" >
+  </head>
+
 	<body>
 		<nav>
     		<ul>
